--- a/index.html
+++ b/index.html
@@ -236,8 +236,8 @@
                 <figure class="modal_picture">
                     <img src="img/portafolio5.jpg" class="modal_img">
                 </figure>
-                <h2 class="modal_title">PASTOREO
-                    <span class="modal_title modal_title--bold">DEL GANADO</span>
+                <h2 class="modal_title modal_title--bold">PASTOREO
+                    <span class="modal_title">DEL GANADO</span>
                 </h2>
                 <a href="#portafolio" class="modal_close">Ver Portafolio</a>
             </div>
@@ -247,8 +247,8 @@
                 <figure class="modal_picture">
                     <img src="img/portafolio6.jpg" class="modal_img">
                 </figure>
-                <h2 class="modal_title">LIMPIEZA
-                    <span class="modal_title modal_title--bold">DEL GANADO</span>
+                <h2 class="modal_title modal_title--bold">LIMPIEZA
+                    <span class="modal_title">DEL GANADO</span>
                 </h2>
                 <a href="#portafolio" class="modal_close">Ver Portafolio</a>
             </div>
@@ -258,7 +258,7 @@
                 <figure class="modal_picture">
                     <img src="img/portafolio7.jpg" class="modal_img">
                 </figure>
-                <h2 class="modal_title modal_title--bold">PATOREO
+                <h2 class="modal_title modal_title--bold">PASTOREO
                     <span class="modal_title">DEL GANADO</span>
                 </h2>
                 <a href="#portafolio" class="modal_close">Ver Portafolio</a>
@@ -269,7 +269,7 @@
                 <figure class="modal_picture">
                     <img src="img/portafolio8.jpg" class="modal_img">
                 </figure>
-                <h2 class="modal_title modal_title--bold">PATOREO
+                <h2 class="modal_title modal_title--bold">PASTOREO
                     <span class="modal_title">DEL GANADO</span>
                 </h2>
                 <a href="#portafolio" class="modal_close">Ver Portafolio</a>
