--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <div class="txt">
                     <h1>BEINVENIDO A NUESTRA GANADERÍA</h1>
                     <p>En nuestro rincón rural, unimos pasión y compromiso <br> por la excelencia de nuestro ganado.</p>
-                    <a href="#servicios" class="btn-shop">PRODUCTOS</a>
+                    <a href="#servicios" class="btn-shop">SERVICIOS</a>
                 </div>
                 <img src="img/portada1.jpg" style="width: 100%; height: 100%;">
             </div>
@@ -65,7 +65,7 @@
                     <h1>ENCUENTRA TU GANADO IDEAL</h1>
                     <p>Compra y vende ganado con comodidad desde tu hogar. <br> Todo en un solo lugar, nuestra
                         plataforma ganadera.</p>
-                    <a href="#servicios" class="btn-shop">PRODUCTOS</a>
+                    <a href="#servicios" class="btn-shop">SERVICIOS</a>
                 </div>
                 <img src="img/portada2.jpg" style="width: 100%; height: 100%;">
             </div>
@@ -74,7 +74,7 @@
                     <h1>CONVIERTE TU GANADO EN INVERSIÓN</h1>
                     <p>Explora nuestro espacio virtual, donde puedes comprar y <br> vender ganado al mejor precio. ¡No
                         te lo pierdas!</p>
-                    <a href="#servicios" class="btn-shop">PRODUCTOS</a>
+                    <a href="#servicios" class="btn-shop">SERVICIOS</a>
                 </div>
                 <img src="img/portada3.jpg" style="width: 100%; height: 100%;">
             </div>
@@ -83,7 +83,7 @@
                     <h1>NEGOCIA GANADO CON FACILIDAD</h1>
                     <p>Únete a nuestra comunidad ganadera y simplifica tus transacciones. <br> La elección inteligente
                         para ganaderos.</p>
-                    <a href="#servicios" class="btn-shop">PRODUCTOS</a>
+                    <a href="#servicios" class="btn-shop">SERVICIOS</a>
                 </div>
                 <img src="img/portada4.jpg" style="width: 100%; height: 100%;">
             </div>
